infra/k8s/cloudsql-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.33.3
          command:
            - "/cloud_sql_proxy"
            - "-instances=cloud-cost-optimizer-488008:us-central1:cloud-cost-postgres=tcp:5432"
          securityContext:
            runAsNonRoot: true
